--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,12 @@
 
 body {
     width: 100vw;
-    height: 100%;
+    height: 100vh;
 
     font-family: 'Space Grotesk', sans-serif;
     font-size: 16px;
+
+    overflow-x: hidden;
 }
 
 main {
